--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -23,15 +23,19 @@
 }
 
 .title {
+  font-size: 2rem;
+  font-weight: 600;
+  line-height: 2.5rem;
+  margin: 0rem;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  line-height: 2.5rem;
 }
 
 .description {
-  font-size: 1rem;
+  font-size: 1.25rem;
   line-height: 1.5;
+  margin: 0;
   overflow: hidden;
   text-overflow: wrap;
 }
