fix: update tutorial button and tutorial title/content font (#167)
* fix: update tutorial button and tutorial title/content font

* style: update spacing a bit

* style: update headers and font weights

--- a/src/features/Workflows/WorkflowsHeader/workflowsHeader.module.scss
+++ b/src/features/Workflows/WorkflowsHeader/workflowsHeader.module.scss
@@ -43,10 +43,10 @@
 
 .title {
   font-size: 1.25rem;
+  font-weight: 300;
   line-height: 1.5;
   margin: 0;
   overflow: hidden;
-  text-overflow: wrap;
 }
 
 .subtitle {
