--- a/src/features/OnBoard/OnBoardGuideContainer/OnBoardGuide/styles.scss
+++ b/src/features/OnBoard/OnBoardGuideContainer/OnBoardGuide/styles.scss
@@ -16,24 +16,24 @@
 }
 
 .b-onboard-screen-title {
-  color: white;
+  color: #fff;
   display: flex;
   font-size: 1rem;
   font-weight: 700;
-  letter-spacing: 0.188rem;
   line-height: 1.25rem;
-  padding: 1.25rem 0 0 0.625rem;
+  padding: 0 0 0 0.625rem;
   width: 95%;
 }
 
 .b-onboard-screen-content {
-  color: white;
+  color: #fff;
   display: flex;
-  font-size: 1rem;
-  height: 5rem;
-  padding-left: 0.5rem;
-  line-height: 1.25rem;
+  flex-grow: 1;
+  font-size: 0.925rem;
   justify-content: flex-start;
+  line-height: 1.25rem;
+  margin-bottom: 1rem;
+  padding-left: 0.5rem;
   width: 93%;
 }
 
@@ -62,6 +62,10 @@
   border-radius: 3.125rem;
   -moz-border-radius: 3.125rem;
   -webkit-border-radius: 3.125rem;
+
+  svg {
+    margin-left: -1rem;
+  }
 }
 
 .b-onboard-screen-arrow {
