feat: use constants for node types

--- a/src/features/OnBoard/OnBoardGuideContainer/OnBoardGuide/styles.scss
+++ b/src/features/OnBoard/OnBoardGuideContainer/OnBoardGuide/styles.scss
@@ -51,7 +51,7 @@
   align-items: center;
   display: flex;
   height: 1.25rem;
-  padding: 0 0 0 0.625rem;
+  padding: 0 0.625rem 0 0.625rem;
   max-width: 7rem;
 }
 
