fix: [PLT-3633] added formik to manage form (#166)
* feat: wip

* feat: wip

* feat: small fixes and styling changes

* fix: remove unnecessary styles

* feat: wip

* feat: wip

* feat: wip

* feat: still a wip

* feat: a lot of refactoring, things working

* feat: pass through name to taskbar

* feat: convert version switcher to css modules

* feat: update base styles

* Feature plt 3523 designer (#141)

* feat: wip

* feat: wip

* feat: wip

* feat: wip

* feat: wip

* feat: still a wip

* feat: a lot of refactoring, things working

* feat: pass through name to taskbar

* feat: convert version switcher to css modules

* feat: update base styles

* feat: properties refactor

* chore: remove component

* Feature plt 3516 home screen redesign (#140)

* feat(workflow): create
Update create workflow

* feat(workflow): create
Fixed error on overview

* fix test specs

* feat: all features upgraded to new modalFlow / confirmModal

* Update Modals - ImportWorkflow, CronJobModal, InputProperties

* update package

* feat: first round of modal updates

* chore: update carbon addons

* fix: updating tests

* fix: submission of form

* fix: label text

* feat: update switch

* fix: labels

* fix: update version comment form

* fix: import attachment

* feat: more cleanup

* fix: update modal to have cancel

* feat: add cancel

* fix: wip fixes for designer modals

* fix: better designer modals, acc update

* Fix workflow execute toggle check

* fix: textAreaModal accesibility, cronjob modal submission

* feat(displayform): add cancel button, dont confirm on save

* fix(home): create workflow
Update button name

* feat(home): redesign
Redesign workflows home

* feat(workflow): create
Updates for create workflow style

* feat(workflow): create
Update icons

* style: don't have max width

* feat(workflow): home
updated styles

* updated test snapshots

* fix: ma

--- a/src/features/Workflows/WorkflowsSection/CreateWorkflow/ImportWorkflowContent/importWorkflowContent.module.scss
+++ b/src/features/Workflows/WorkflowsSection/CreateWorkflow/ImportWorkflowContent/importWorkflowContent.module.scss
@@ -1,11 +1,19 @@
 @import "~Styles/variables";
 
+.body {
+  height: 20.25rem;
+  width: 100%;
+  :global .bx--file__selected-file {
+    background: none;
+  }
+}
+
 .confirmInfoForm {
   display: flex;
   flex-direction: column;
   :global .bx--form-item,
   :global .bx--list-box__wrapper {
-    max-width: 19.55rem;
+    max-width: 20rem;
     margin-top: 1rem;
   }
 }
