--- a/src/components/WorkflowLink/WorkflowLink.module.scss
+++ b/src/components/WorkflowLink/WorkflowLink.module.scss
@@ -1,21 +1,23 @@
 @import "~Styles/variables";
 
-.unconnected {
-  opacity: 0.325;
-}
+body {
+  .unconnected {
+    opacity: 0.325;
+  }
 
-.locked {
-  opacity: 0.5;
-}
+  .locked {
+    opacity: 0.5;
+  }
 
-.traversed {
-  opacity: 1;
-}
+  .traversed {
+    opacity: 1;
+  }
 
-.path {
-  stroke: var(--cds-interactive-01);
-  &.locked {
-    stroke: #50565b;
-    opacity: inherit;
+  .path {
+    stroke: var(--cds-interactive-01);
+    &.locked {
+      stroke: #50565b;
+      opacity: inherit;
+    }
   }
 }
