--- a/src/components/WorkflowExecutionPort/WorkflowExecutionPort.module.scss
+++ b/src/components/WorkflowExecutionPort/WorkflowExecutionPort.module.scss
@@ -1,50 +1,52 @@
 @import "~Styles/variables";
 
-.port {
-  position: absolute;
-  height: 2.25rem;
-  width: 2rem;
+body {
+  .port {
+    position: absolute;
+    height: 2.25rem;
+    width: 2rem;
 
-  &.right {
-    background-color: var(--cds-interactive-01);
-    border: 0.0625rem solid var(--cds-interactive-01);
-    border-left: none;
-    right: -2.125rem;
-    top: 1.25rem;
-    border-bottom-right-radius: 50%;
-    border-top-right-radius: 50%;
-    background-image: url("../../assets/icons/chevron_white.svg");
-    background-position: center;
-    background-repeat: no-repeat;
+    &.right {
+      background-color: var(--cds-interactive-01);
+      border: 0.0625rem solid var(--cds-interactive-01);
+      border-left: none;
+      right: -2.125rem;
+      top: 1.25rem;
+      border-bottom-right-radius: 50%;
+      border-top-right-radius: 50%;
+      background-image: url("../../assets/icons/chevron_white.svg");
+      background-position: center;
+      background-repeat: no-repeat;
 
-    &.execution {
-      background-color: #50565b;
-      border: 0.0625rem solid #50565b;
+      &.execution {
+        background-color: #50565b;
+        border: 0.0625rem solid #50565b;
+      }
     }
-  }
-  &.left {
-    background-color: #b3e6ff;
-    border: 0.0625rem solid var(--cds-interactive-01);
-    border-right: none;
-    border-bottom-left-radius: 50%;
-    border-top-left-radius: 50%;
-    left: -2.125rem;
-    top: 1.25rem;
-    background-image: url("../../assets/icons/chevron.svg");
-    background-position: center;
-    background-repeat: no-repeat;
+    &.left {
+      background-color: #b3e6ff;
+      border: 0.0625rem solid var(--cds-interactive-01);
+      border-right: none;
+      border-bottom-left-radius: 50%;
+      border-top-left-radius: 50%;
+      left: -2.125rem;
+      top: 1.25rem;
+      background-image: url("../../assets/icons/chevron.svg");
+      background-position: center;
+      background-repeat: no-repeat;
 
-    &.execution {
-      background-color: #d5d9e0;
-      border: 0.0625rem solid #50565b;
+      &.execution {
+        background-color: #d5d9e0;
+        border: 0.0625rem solid #50565b;
+      }
     }
-  }
 
-  &:hover {
-    filter: brightness(110%);
-  }
+    &:hover {
+      filter: brightness(110%);
+    }
 
-  &.execution:hover {
-    filter: brightness(100%);
+    &.execution:hover {
+      filter: brightness(100%);
+    }
   }
 }
