--- a/src/components/TemplateTaskNodeDesigner/TemplateTaskNodeDesigner.module.scss
+++ b/src/components/TemplateTaskNodeDesigner/TemplateTaskNodeDesigner.module.scss
@@ -20,6 +20,6 @@
 }
 
 .updateTaskModalContainer {
-  max-height: 62.5rem;
-  max-width: 60rem;
+  max-height: 62.5rem !important;
+  max-width: 60rem !important;
 }
