--- a/src/features/Workflows/WorkflowsHeader/workflowsHeader.module.scss
+++ b/src/features/Workflows/WorkflowsHeader/workflowsHeader.module.scss
@@ -1,6 +1,12 @@
 @import "~@boomerang/boomerang-styles/lib/colors";
 @import "~Styles/variables";
 
+.header {
+  position: sticky;
+  top: 0;
+  z-index: 2;
+}
+
 .container {
   background: $white;
   display: flex;
