--- a/src/features/Workflows/workflowHome.module.scss
+++ b/src/features/Workflows/workflowHome.module.scss
@@ -10,3 +10,34 @@
 .content {
   padding: 0rem 2rem 2rem;
 }
+
+.sectionContainer {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: auto;
+  margin-top: 1.25rem;
+  margin-bottom: 2.75rem;
+}
+
+.noWorkflowsMessage {
+  margin-top: 1rem;
+  color: #697077;
+  font-size: 1rem;
+  font-weight: 300;
+  line-height: 1.25rem;
+}
+
+.team {
+  margin-left: 1rem;
+  font-size: 1.5rem;
+  font-weight: 600;
+  margin: 0rem;
+  letter-spacing: 0.0625rem;
+}
+
+.workflows {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -0.75rem;
+}
