feat: continue work with home refactor

--- a/src/styles/_carbon-components.scss
+++ b/src/styles/_carbon-components.scss
@@ -11,6 +11,7 @@ $carbon-addons-bmrg--theme: boomerang;
 @import "~carbon-components/scss/components/data-table-v2/data-table-v2-core";
 @import "~carbon-components/scss/components/data-table-v2/data-table-v2-sort";
 @import "~carbon-components/scss/components/file-uploader/file-uploader";
+@import "~carbon-components/scss/components/inline-loading/inline-loading";
 @import "~carbon-components/scss/components/loading/loading";
 @import "~carbon-components/scss/components/multi-select/multi-select";
 @import "~carbon-components/scss/components/notification/inline-notification";
