--- a/src/features/Workflows/WorkflowCard/workflowCard.module.scss
+++ b/src/features/Workflows/WorkflowCard/workflowCard.module.scss
@@ -17,6 +17,9 @@
     &:focus {
       @include focus-outline($offset: 0rem);
     }
+    &[disabled] {
+      pointer-events: none;
+    }
   }
 
   :global .bx--overflow-menu {
@@ -40,85 +43,59 @@
     // }
   }
 }
-.cardHeader {
-  position: absolute;
-  right: 0;
-}
-.cardStatusContainer {
-  margin-left: 0.75rem;
+
+.details {
   display: flex;
-  align-items: center;
-}
-.cardStatus {
-  color: $gray-50;
-}
-.cardCircle {
-  margin-right: 0.5rem;
-  min-width: 0.75rem;
-  max-width: 0.75rem;
-  min-height: 0.75rem;
-  max-height: 0.75rem;
-  border-radius: 50%;
-  &.--published {
-    background-color: $green-30;
-  }
-  &.--draft {
-    background-color: $gray-20;
-  }
+  box-sizing: border-box;
+  justify-content: space-between;
+  height: 6.5rem;
+  padding: 0.5rem;
+  margin-top: 1.5rem;
 }
 
-.cardInfo {
-  display: flex;
-  justify-content: space-between;
-  height: 8rem;
-  padding: 0.5rem;
-}
-.cardIconContainer {
-  align-items: center;
+.iconContainer {
   display: flex;
   justify-content: center;
   width: 5rem;
 }
-.cardIcon {
+
+.icon {
   width: 2rem;
   height: 2rem;
-  margin-bottom: 2.5rem;
 }
-.cardDescriptionContainer {
+
+.descriptionContainer {
   color: $gray-60;
-  cursor: pointer;
-  display: flex;
   font-size: 0.875rem;
-  flex-direction: column;
-  margin: 1rem 1rem 0rem 0;
-  overflow: hidden;
+  margin-right: 1rem;
   width: 15rem;
   &:focus {
     outline: none;
   }
 }
-.cardName {
+.name {
   color: var(--cds-text-01);
   font-size: 1.125rem;
   font-weight: 600;
   letter-spacing: 0rem;
   line-height: 1.25rem;
+  margin: 0;
   margin-bottom: 0.5rem;
   text-align: left;
+  @include multiline-text-overflow-ellipsis();
 }
 
-.cardDescription {
+.description {
   color: var(--cds-text-01);
   display: block;
   font-size: 0.75rem;
   letter-spacing: 0rem;
   line-height: 0.9375rem;
   text-align: left;
-  text-overflow: ellipsis;
-  word-break: break-word;
+  @include multiline-text-overflow-ellipsis();
 }
 
-.cardLaunch {
+.launch {
   cursor: pointer;
   width: 100%;
   :global .bx--btn {
@@ -140,11 +117,13 @@
     }
   }
 }
+
 .executeWorkflow {
   height: 16rem;
   width: 30rem;
   text-align: left;
 }
+
 :global .bx--overflow-menu-options.bx--overflow-menu--flip {
   position: fixed !important;
 }
