--- a/src/components/TextEditorModal/TextEditorModal.module.scss
+++ b/src/components/TextEditorModal/TextEditorModal.module.scss
@@ -1,6 +1,6 @@
 @import "~Styles/mixins";
 
-.c-task-text-area-modal {
+.modalContainer {
   position: relative;
   max-height: 60.375rem;
   height: 100vh;
