style: fix a few things

--- a/src/features/Designer/Editor/Overview/CronJobModal/cronJobModal.module.scss
+++ b/src/features/Designer/Editor/Overview/CronJobModal/cronJobModal.module.scss
@@ -31,7 +31,7 @@
 }
 
 .timeContainer {
-  align-items: flex-start;
+  align-items: flex-end;
   display: flex;
   :global .bx--list-box__field {
     width: 23rem;
