--- a/src/features/Execution/Main/ExecutionTaskLog/TaskItem/OutputPropertiesLog/outputPropertisLog.module.scss
+++ b/src/features/Execution/Main/ExecutionTaskLog/TaskItem/OutputPropertiesLog/outputPropertisLog.module.scss
@@ -2,15 +2,15 @@
 @import "~Styles/mixins";
 @import "~Styles/variables";
 
-.c-output-properties {
+.container {
   max-width: 50rem;
 
-  .bx--modal-content {
+  :global .bx--modal-content {
     padding-right: 1rem;
   }
 }
 
-.s-output-properties-trigger {
+.trigger {
   color: var(--cds-interactive-01);
   cursor: pointer;
   font-size: 0.875rem;
@@ -21,13 +21,13 @@
   }
 }
 
-.s-output-properties-json {
+.propertiesJson {
   background-color: $white;
   height: 25rem;
   overflow-y: auto;
   margin-top: 1rem;
 
-  .object-key {
+  :global .object-key {
     span {
       color: var(--cds-interactive-01);
     }
