feat: refactor even more of the designer

--- a/src/features/Designer/Editor/DesignerHeader/VersionSwitcher/VersionSwitcher.module.scss
+++ b/src/features/Designer/Editor/DesignerHeader/VersionSwitcher/VersionSwitcher.module.scss
@@ -9,6 +9,7 @@ $disabled-color: #bebec0;
   justify-content: center;
   align-items: center;
   margin: 0 2.5rem;
+  width: 16rem;
 
   &.disabled {
     pointer-events: none;
