--- a/src/features/Designer/Editor/Editor.module.scss
+++ b/src/features/Designer/Editor/Editor.module.scss
@@ -8,6 +8,33 @@
     display: flex;
     flex-grow: 1;
     position: relative;
+    &.loading {
+      justify-content: space-around;
+      margin-top: 20vh;
+      padding: 0 4rem;
+    }
+  }
+
+  .loadingContainer {
+    align-items: center;
+    display: flex;
+    height: 10rem;
+    width: 100%;
+  }
+
+  .loadingStartNode {
+    min-width: 9rem;
+    min-height: 5rem;
+  }
+
+  .loadingEdge {
+    height: 0.5rem;
+    margin-bottom: 0;
+  }
+
+  .loadingTaskNode {
+    min-width: 14rem;
+    min-height: 5rem;
   }
 
   .diagram {
