style: fix overflow and add title

--- a/src/features/Editor/Header/header.module.scss
+++ b/src/features/Editor/Header/header.module.scss
@@ -72,6 +72,7 @@
   align-items: center;
   bottom: 1.5rem;
   display: flex;
+  height: 2rem;
   justify-content: flex-end;
   margin-bottom: -0.875rem;
   margin-left: auto;
