--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,8 +1,6 @@
-@import "~@boomerang/boomerang-styles/lib/colors";
-
 .container {
   align-items: flex-start;
-  background: $white;
+  background: white;
   display: flex;
   flex-direction: column;
   padding: 1rem 2rem 2rem;
