--- a/src/components/TaskLinkExecution/TaskLink.module.scss
+++ b/src/components/TaskLinkExecution/TaskLink.module.scss
@@ -1,30 +1,32 @@
 @import "~Styles/variables";
 
-.traversed {
-  opacity: 1;
-}
-
-.statusIcon {
-  align-items: center;
-  background: var(--cds-ui-01);
-  border-radius: 50%;
-  display: flex;
-  height: 1.5rem;
-  justify-content: center;
-
-  &.completed {
-    path {
-      fill: #009d9a;
-    }
+body {
+  .traversed {
+    opacity: 1;
   }
 
-  &.failure {
-    path {
-      fill: #a51920;
-    }
-  }
+  .statusIcon {
+    align-items: center;
+    background: var(--cds-ui-01);
+    border-radius: 50%;
+    display: flex;
+    height: 1.5rem;
+    justify-content: center;
 
-  path {
-    fill: black;
+    &.completed {
+      path {
+        fill: #009d9a;
+      }
+    }
+
+    &.failure {
+      path {
+        fill: #a51920;
+      }
+    }
+
+    path {
+      fill: var(--cds-text-01);
+    }
   }
 }
