--- a/src/features/Execution/Main/WorkflowActions/WorkflowActions.module.scss
+++ b/src/features/Execution/Main/WorkflowActions/WorkflowActions.module.scss
@@ -35,12 +35,12 @@
   width: 1.5rem;
   path,
   rect {
-    fill: #0072c3;
+    fill: var(--cds-interactive-01);
   }
 }
 
 .editText {
-  color: #0072c3;
+  color: var(--cds-interactive-01);
   font-size: 1rem;
   line-height: 1.5rem;
 }
