--- a/src/features/Insights/InsightsHeader/insightsHeader.module.scss
+++ b/src/features/Insights/InsightsHeader/insightsHeader.module.scss
@@ -1,9 +1,8 @@
-@import "~@boomerang/boomerang-styles/lib/colors";
 @import "~Styles/variables";
 
 .container {
   align-items: flex-start;
-  background: $white;
+  background: white;
   display: flex;
   flex-direction: column;
   height: 7.3125rem;
