--- a/src/features/Workflows/WorkflowsHeader/workflowsHeader.module.scss
+++ b/src/features/Workflows/WorkflowsHeader/workflowsHeader.module.scss
@@ -1,4 +1,3 @@
-@import "~@boomerang/boomerang-styles/lib/colors";
 @import "~Styles/variables";
 
 .header {
@@ -8,7 +7,7 @@
 }
 
 .container {
-  background: $white;
+  background: white;
   display: flex;
   justify-content: space-between;
   height: 4.3125rem;
