--- a/src/styles/_carbon-components.scss
+++ b/src/styles/_carbon-components.scss
@@ -18,6 +18,7 @@ $carbon-addons-bmrg--theme: boomerang;
 @import "~carbon-components/scss/components/pagination/pagination";
 @import "~carbon-components/scss/components/search/search";
 @import "~carbon-components/scss/components/select/select";
+@import "~carbon-components/scss/components/structured-list/structured-list";
 @import "~carbon-components/scss/components/tabs/tabs";
 @import "~carbon-components/scss/components/skeleton/skeleton";
 
