--- a/src/features/Insights/CustomPieLegend/customPieLegend.module.scss
+++ b/src/features/Insights/CustomPieLegend/customPieLegend.module.scss
@@ -10,6 +10,7 @@
 }
 .iconContainer {
   align-items: flex-start;
+  color: var(--cds-text-01);
   cursor: pointer;
   display: flex;
   margin-bottom: 0.5rem;
