--- a/src/components/WorkflowTaskForm/WorkflowTaskForm.module.scss
+++ b/src/components/WorkflowTaskForm/WorkflowTaskForm.module.scss
@@ -19,7 +19,7 @@
 }
 
 .inputsTitle {
-  color: #161616;
+  color: var(--cds-text-01);
   font-size: 0.875rem;
   letter-spacing: 0.01rem;
   line-height: 1.25rem;
